src/objects/Technical_Question__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Head Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <picklist>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Question_Text__c</fullName>
        <label>Technical Question Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Technical Questions</relationshipLabel>
        <relationshipName>Technical_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Technical Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQ-{0000}</displayFormat>
        <label>Technical Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>